--- a/components/operator/templates/nats/nats.conf
+++ b/components/operator/templates/nats/nats.conf
@@ -13,7 +13,7 @@ lame_duck_grace_period: 0s
 
 max_payload: {{ mulf .Values.maxEventSize 1.5 | int }}
 
-{{- if eq .Logger.Level "debug" }}
+{{- if eq .Telemetry.Logs.Level "debug" }}
 debug: true
 {{- end }}
 
