--- a/components/operator/templates/platform/configmap-env.yaml
+++ b/components/operator/templates/platform/configmap-env.yaml
@@ -26,9 +26,9 @@ data:
   KUBEFOX_NAMESPACE: {{ .Platform.Namespace | quote }}
   KUBEFOX_PLATFORM_NAMESPACE: {{ .Platform.Namespace | quote }}
   KUBEFOX_PLATFORM: {{ .Platform.Name | quote }}
-  {{- with .Logger.Format }}
+  {{- with .Telemetry.Logs.Format }}
   KUBEFOX_LOG_FORMAT: {{ . | quote }}
   {{- end }}
-  {{- with .Logger.Level }}
+  {{- with .Telemetry.Logs.Level }}
   KUBEFOX_LOG_LEVEL: {{ . | quote }}
   {{- end }}
