--- a/api/crds/kubefox.xigxog.io_httpadapters.yaml
+++ b/api/crds/kubefox.xigxog.io_httpadapters.yaml
@@ -11,7 +11,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.15.0
   name: httpadapters.kubefox.xigxog.io
 spec:
   group: kubefox.xigxog.io
@@ -37,9 +37,11 @@ spec:
       openAPIV3Schema:
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: |-
+              APIVersion defines the versioned schema of this representation of an object.
+              Servers should convert recognized schemas to the latest internal value, and
+              may reject unrecognized values.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
             type: string
           details:
             properties:
@@ -49,9 +51,12 @@ spec:
                 type: string
             type: object
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: |-
+              Kind is a string value representing the REST resource this object represents.
+              Servers may infer this from the endpoint the client submits requests to.
+              Cannot be updated.
+              In CamelCase.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
             type: string
           metadata:
             type: object
@@ -70,11 +75,12 @@ spec:
                 type: object
               insecureSkipVerify:
                 default: false
-                description: InsecureSkipVerify controls whether the Adapter verifies
-                  the server's certificate chain and host name. If InsecureSkipVerify
-                  is true, any certificate presented by the server and any host name
-                  in that certificate is accepted. In this mode, TLS is susceptible
-                  to machine-in-the-middle attacks.
+                description: |-
+                  InsecureSkipVerify controls whether the Adapter verifies the server's
+                  certificate chain and host name. If InsecureSkipVerify is true, any
+                  certificate presented by the server and any host name in that certificate
+                  is accepted. In this mode, TLS is susceptible to machine-in-the-middle
+                  attacks.
                 type: boolean
               url:
                 minLength: 1
