--- a/components/operator/templates/component/deployment.yaml
+++ b/components/operator/templates/component/deployment.yaml
@@ -50,7 +50,7 @@ spec:
             - -app={{ .Component.App }}
             - -name={{ .Component.Name }}
             - -hash={{ .Component.Hash }}
-            - -broker-addr=$(KUBEFOX_HOST_IP):6060
+            - -broker-addr={{ .Platform.BrokerAddr }}
             - -health-addr=0.0.0.0:1111
             - -max-event-size={{ .Values.maxEventSize }}
             - -log-format={{ .Logger.Format | default "json" }}
