--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,8 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-mkdocs = "==1.5.3"
-mkdocs-material = "*"
+mkdocs = "==1.6.0"
+mkdocs-material = "==9.5.24"
 mkdocs-mermaid2-plugin = "==1.1.1"
 mkdocs-awesome-pages-plugin = "==2.9.2"
 
