--- a/api/crds/kubefox.xigxog.io_platforms.yaml
+++ b/api/crds/kubefox.xigxog.io_platforms.yaml
@@ -4789,6 +4789,7 @@ spec:
                       address:
                         type: string
                       enabled:
+                        default: false
                         type: boolean
                     type: object
                   logs:
