--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ mkdocs = "==1.6.0"
 mkdocs-material = "==9.5.24"
 mkdocs-mermaid2-plugin = "==1.1.1"
 mkdocs-awesome-pages-plugin = "==2.9.2"
+mkdocs-snippets = "*"
 
 [requires]
 python_version = "3"
